Updated Static Pages Top banner

--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -34,7 +34,7 @@
         <br>
         <br>
         <div class="col-sm-12 white-word form-group">
-            <h1 style="font-size:16px;">1. What type of plants would you like to plant? <a href="@Url.Content("~/PlantSets/Instrction/")"><img src="~/Picture/Icon/Tooltip_icon.png" height="15"></a></h1>
+            <h1 style="font-size:16px;">1. What type of plants would you like to plant? <a href="@Url.Content("~/PlantSets/Instrction/")">Learn more...</a></h1>
             <div class="checkbox">
                 <label>
                     <input type="checkbox" name="Tree" value="Trees" checked="checked">Trees
@@ -52,7 +52,7 @@
         </div>
 
         <div class="col-sm-12 white-word form-group" style="margin-top:20px">
-            <p style="font-size:16px;">2. How often would you like to water your plants?</p>
+            <p style="font-size:16px;">2. How often would you like to water your plants? <a href="@Url.Content("~/SoilType/WateringGuide/")">Learn more...</a></p>
             <div class="radio">
                 <label>
                     <input type="radio" name="PlantWaterFrq" value="2">Often (2 -3 days)
@@ -88,7 +88,7 @@
         </div>
 
         <div class="col-sm-12 white-word form-group" style="margin-top:20px">
-            <p style="font-size:16px;">4. How much sunshine is available in your garden?</p>
+            <p style="font-size:16px;">4. How much sunshine is available in your garden? <a href="@Url.Content("~/SoilType/Sunshine/")">Learn more...</a></p>
             <div class="radio">
                 <label>
                     <input type="radio" name="PlantSunNeedPath" value="1">All-day Sunny
@@ -103,7 +103,7 @@
         </div>
 
         <div class="col-sm-12 white-word form-group" style="margin-top:20px">
-            <p style="font-size:16px">5. Do you prefer drought tolerant plants?</p>
+            <p style="font-size:16px">5. Do you prefer drought tolerant plants? <a href="@Url.Content("~/SoilType/Benefits/")">Learn more...</a></p></p>
             <div class="radio">
                 <label>
                     <input type="radio" name="PlantDroughtTol" value="1">Yes
