--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
                             <li>@Html.ActionLink("Watering Guide", "WateringGuide", "SoilType")</li>
                             <li>@Html.ActionLink("Soil Types", "SoilTypes", "SoilType")</li>
                             <li>@Html.ActionLink("Why Prune", "Prune", "SoilType")</li>
+                            <li>@Html.ActionLink("Sunshine Guide", "Sunshine", "SoilType")</li>
                             <li>@Html.ActionLink("Other Cares", "OtherCare", "SoilType")</li>
                             <li>@Html.ActionLink("Wildlife Friendly Tips", "WildlifeTips", "SoilType")</li>
                         </ul>
