--- a/PlottedAssist/Views/SoilType/OtherCare.cshtml
+++ b/PlottedAssist/Views/SoilType/OtherCare.cshtml
@@ -3,59 +3,69 @@
     ViewBag.Title = "OtherCare";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    <div class="col-md-8 col-md-offset-2" style="margin-top:50px;padding-bottom:80px;">
-        <h2 class="white-word">Other cares</h2>
-        <p class="white-word">
-            Once you have established your sustainable garden, the next step is to know how to care for it through regular maintenance. This section will provide some information for you to follow. <br>
 
-            A sustainable garden is a winner in the maintenance stakes. It is low maintenance because it needs less mowing, less pruning, fewer chemicals, and less watering. This means you will spend less time maintaining it and more time enjoying it!
-        </p>
-        <h3 class="white-word">Compost</h3>
-        <p class="white-word">
-            Compost is a complete DIY plant food and soil conditioner. It is great for soil structure, root growth, soil water-holding capacity, and helps to increase the presence of worms and other beneficial organisms. It turns everything from vacuum cleaner dust to eggshells into free fertilizer. Most importantly, it diverts nutrient-rich organic waste back into your garden, rather than into a landfill site, helping to reduce damaging greenhouse gases. Remember healthy living soil = healthy plants.
-        </p>
-        <h4 class="white-word">How to make compost</h4>
-        <p class="white-word">
-            Your compost will be healthiest and most efficient if it’s built using a layered method. The four key compost ingredients are nitrogen, carbon, oxygen, and water.<br>
-            Nitrogen – added by green and fresh ingredients such as fruit and veggie scraps fresh lawn clippings tea leaves/bags, coffee grounds manure from grass-eating animals i.e. horse, cow, sheep, chicken, bird eggshells.<br>
-            Carbon – added by dried and aged ingredients such as dried leaves and brown grass clippings scrunched/shredded newspaper paper towels and cardboard small twigs and small sticks veggie seedlings at the end of their season straw vacuum cleaner bag contents.<br>
-            Oxygen – added by mixing and aerating your compost weekly.<br>
-            Water – added by watering the compost during construction, and when you notice it is dry while stirring. Your compost should always be damp, but not wet.<br>
-        </p>
-        <h3 class="white-word">Mulch</h3>
-        <p class="white-word">
-            Even if you don’t have a compost heap or bin, you can still enjoy the marvelous benefits of mulch. Simply spread weed-free dry grass clippings, leaves, and shredded prunings on top of the soil to a depth of 15 cm for course material such as leaves and shredded prunings and only 2.5 cm for fresh grass clippings. Remember to keep the mulch away from plant stems to avoid collar rot.<br><br>
-
-            Benefits of mulch: Mulch can
-        </p>
-        <ul class="white-word">
-            <li>suppress weeds</li>
-            <li>act as a natural slow-release fertilizer </li>
-            <li>provide a home for plant-friendly insects and other beneficial organisms</li>
-            <li>keep up to 70% more water in the soil than unmulched soil  </li>
-            <li>keep soil temperature stable</li>
-        </ul>
-        <div style="text-align:center">
-            <img src="~/Picture/Mulch.png">
+    <div class="row" style="background-color:#4F6657;">
+        <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+            <div>
+                <img src="~/Picture/Banner/otherinfoTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
+            </div>
         </div>
-        <h3 class="white-word">Fertilizers</h3>
-        <p class="white-word">
-            Some forms of fertilizer are often expensive, require a lot of water, and may not even be necessary. Check any nutrient deficiency symptoms in foliage with your local nursery. Avoid chemical fertilizers and go organic with your own mulch and compost.
-            Nitrogen-rich fertilizers cause algal blooms and increase weed growth in our waterways. This disturbs the ecological balance for animals and plants that live there. Some native plants, such as banksias and grevilleas, are sensitive to phosphorus so avoid using fertilizers and greywater on these.  <br><br>
+        <div class="col-sm-3" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
+            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
+        </div>
+        <div class="col-md-8 col-md-offset-2" style="margin-top:50px;padding-bottom:80px;">
+            <h2 class="white-word">Other cares</h2>
+            <p class="white-word">
+                Once you have established your sustainable garden, the next step is to know how to care for it through regular maintenance. This section will provide some information for you to follow. <br>
 
-            <b>If you feel as though you have to use extra fertilizers:  </b>
-        </p>
-        <ul class="white-word">
-            <li>confirm why you need them</li>
-            <li>never allow fertilizers to run into creeks or stormwater drains </li>
-            <li>follow the manufacturer’s instructions carefully</li>
-            <li>ensure that you dig the fertilizer in well to minimize the chance of run-off</li>
-            <li>never fertilize a dry plant</li>
-            <li>Always ensure that you have given the pot or garden bed a good deep watering before and after applying fertilizer. This will protect your plants from fertilizer burn.</li>
-        </ul>
-        <div style="text-align:center">
-            <img src="~/Picture/Fertilizers.png">
-        </div>        
+                A sustainable garden is a winner in the maintenance stakes. It is low maintenance because it needs less mowing, less pruning, fewer chemicals, and less watering. This means you will spend less time maintaining it and more time enjoying it!
+            </p>
+            <h3 class="white-word">Compost</h3>
+            <p class="white-word">
+                Compost is a complete DIY plant food and soil conditioner. It is great for soil structure, root growth, soil water-holding capacity, and helps to increase the presence of worms and other beneficial organisms. It turns everything from vacuum cleaner dust to eggshells into free fertilizer. Most importantly, it diverts nutrient-rich organic waste back into your garden, rather than into a landfill site, helping to reduce damaging greenhouse gases. Remember healthy living soil = healthy plants.
+            </p>
+            <h4 class="white-word">How to make compost</h4>
+            <p class="white-word">
+                Your compost will be healthiest and most efficient if it’s built using a layered method. The four key compost ingredients are nitrogen, carbon, oxygen, and water.<br>
+                Nitrogen – added by green and fresh ingredients such as fruit and veggie scraps fresh lawn clippings tea leaves/bags, coffee grounds manure from grass-eating animals i.e. horse, cow, sheep, chicken, bird eggshells.<br>
+                Carbon – added by dried and aged ingredients such as dried leaves and brown grass clippings scrunched/shredded newspaper paper towels and cardboard small twigs and small sticks veggie seedlings at the end of their season straw vacuum cleaner bag contents.<br>
+                Oxygen – added by mixing and aerating your compost weekly.<br>
+                Water – added by watering the compost during construction, and when you notice it is dry while stirring. Your compost should always be damp, but not wet.<br>
+            </p>
+            <h3 class="white-word">Mulch</h3>
+            <p class="white-word">
+                Even if you don’t have a compost heap or bin, you can still enjoy the marvelous benefits of mulch. Simply spread weed-free dry grass clippings, leaves, and shredded prunings on top of the soil to a depth of 15 cm for course material such as leaves and shredded prunings and only 2.5 cm for fresh grass clippings. Remember to keep the mulch away from plant stems to avoid collar rot.<br><br>
+
+                Benefits of mulch: Mulch can
+            </p>
+            <ul class="white-word">
+                <li>suppress weeds</li>
+                <li>act as a natural slow-release fertilizer </li>
+                <li>provide a home for plant-friendly insects and other beneficial organisms</li>
+                <li>keep up to 70% more water in the soil than unmulched soil  </li>
+                <li>keep soil temperature stable</li>
+            </ul>
+            <div style="text-align:center">
+                <img src="~/Picture/Mulch.png">
+            </div>
+            <h3 class="white-word">Fertilizers</h3>
+            <p class="white-word">
+                Some forms of fertilizer are often expensive, require a lot of water, and may not even be necessary. Check any nutrient deficiency symptoms in foliage with your local nursery. Avoid chemical fertilizers and go organic with your own mulch and compost.
+                Nitrogen-rich fertilizers cause algal blooms and increase weed growth in our waterways. This disturbs the ecological balance for animals and plants that live there. Some native plants, such as banksias and grevilleas, are sensitive to phosphorus so avoid using fertilizers and greywater on these.  <br><br>
+
+                <b>If you feel as though you have to use extra fertilizers:  </b>
+            </p>
+            <ul class="white-word">
+                <li>confirm why you need them</li>
+                <li>never allow fertilizers to run into creeks or stormwater drains </li>
+                <li>follow the manufacturer’s instructions carefully</li>
+                <li>ensure that you dig the fertilizer in well to minimize the chance of run-off</li>
+                <li>never fertilize a dry plant</li>
+                <li>Always ensure that you have given the pot or garden bed a good deep watering before and after applying fertilizer. This will protect your plants from fertilizer burn.</li>
+            </ul>
+            <div style="text-align:center">
+                <img src="~/Picture/Fertilizers.png">
+            </div>
+        </div>
     </div>
-
 
