--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -55,7 +55,7 @@
                 </dd>
 
                 <dt>
-                    Weed Control
+                    How to Control this Weed
                 </dt>
 
                 <dd>
@@ -63,7 +63,7 @@
                 </dd>
 
                 <dt>
-                    Replace Indigene
+                    Replacement Indigenous Plant
                 </dt>
 
                 <dd>
