--- a/PlottedAssist/Views/SoilType/WateringGuide.cshtml
+++ b/PlottedAssist/Views/SoilType/WateringGuide.cshtml
@@ -3,6 +3,15 @@
     ViewBag.Title = "WateringGuide";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="row" style="background-color:#4F6657;">
+    <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+        <div>
+            <img src="~/Picture/Banner/otherinfoTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
+        </div>
+    </div>
+    <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
+        <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
+    </div>
     <div class="col-md-8 col-md-offset-2" style="margin-top:50px;padding-bottom:80px;">
         <h2 class="white-word">Watering to Establish Your New Plants for Healthy Roots and Better Drought Tolerance!</h2>
         <p class="white-word">
@@ -60,5 +69,5 @@
         </p>
 
     </div>
-        
 
+    </div>
