link color, homepage title

--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -6,9 +6,8 @@
 
         <!--Header-->
         <div class="row" style="padding:0;background:url(../Picture/header_picture5.jpg) center;margin:0;padding-bottom:13%;background-repeat:no-repeat;background-size:100%">
-            <div class="col-lg-4 col-xs-4 col-xs-offset-4 white-word"  style="text-align:center;font-family:'Times New Roman';border-radius:5px;background-color:rgba(0,0,0,0.5);margin-top:15%;margin-left:34%">
-                <h3 style="font-size:48px">We Help Your Garden Grow.</h3><br>
-                <p style="font-size:28px">We are a non-profit organization spreading awareness of planting and caring for indigenous plants in your garden.<p>
+            <div>
+                <img src="~/Picture/Banner/Homepage_title.png" style="width:35%;margin-top:15%;margin-left:33%">
             </div>
         </div>
 
@@ -17,7 +16,7 @@
         <div class="col-md-10 col-md-offset-1 col-xs-12" style="margin-top:0px;margin-bottom:5%">
 
             <!--Guidance-->
-            <div class="col-md-3 col-md-offset-1" style="border: 0px; margin-top: 10%;margin-bottom: 100px ">
+            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px; margin-top: 10%;margin-bottom: 100px ">
                 <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px;">
                     <br>
                     <div style="text-align:center">
@@ -27,7 +26,7 @@
                     <br>
                     
                     <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center">Invasive Plants</h3>
-                    <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</h3>
+                    <h3 style="font-size:16px;padding-left:10%;padding-right:10%;text-align:justify">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</h3>
                     <br> 
                     <div style="text-align:center">
                         <a class="btn btn-success" href="@Url.Content("~/WeedSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:10%;width:100px;height:30px">Learn more</a>                   
@@ -35,7 +34,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 col-md-offset-1" style="border:0px;margin-top:10%;position:relative;margin-bottom:100px;">
+            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border:0px;margin-top:10%;position:relative;margin-bottom:100px;">
                 <div class="white-word" style="        background: #1E2621;
         
         border: 0px;
@@ -56,7 +55,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 col-md-offset-1" style="border: 0px;margin-top:10%;position:relative;margin-bottom:100px;">
+            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-3 col-md-offset-1" style="border: 0px;margin-top:10%;position:relative;margin-bottom:100px;">
                 <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px">
                     <br>
                     <div style="text-align:center">
