--- a/PlottedAssist/Views/PlantSets/Instrction.cshtml
+++ b/PlottedAssist/Views/PlantSets/Instrction.cshtml
@@ -13,8 +13,8 @@
 
 
 <div style="background-image:url(../../Picture/Tooltip.jpg);padding-bottom:50%;background-repeat:no-repeat;background-size:100% 100%;">    
-    <div>
-        <p style="font-size:18px;padding-top:5%;margin-left:1%">< @Html.ActionLink("Back to Questionnaire", "Index")</p>
+    <div>        
+        <h1 style="font-size:16px;padding-top:75px;margin-left:1%"><a href="@Url.Content("~/PlantSets/Index/")" style="color:#FDB298;">< Back to Questionnaire</a></h1>
     </div>
 </div>
 
