--- a/PlottedAssist/Views/PlantSets/TestResult.cshtml
+++ b/PlottedAssist/Views/PlantSets/TestResult.cshtml
@@ -17,8 +17,8 @@
 
         <!--Plant information and picture-->
 
-        <div style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%;margin-top:5%">
-            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
+        <div style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%;">
+            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)" style="margin-top:50px"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
         </div>
 
         <div class="col-xs-12 col-sm-8 col-sm-offset-1 col-md-9 col-lg-10 col-lg-offset-1">
