--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -63,11 +63,11 @@
                 </dd>
 
                 <dt>
-                    Replace Indigene
+                    Replace Indigenous
                 </dt>
 
                 <dd>
-                    <p><a href="@Url.Content("~/PlantSets/Details/" + Model.PlantSet.Id)" style="color:white;text-decoration:underline"> @Html.DisplayFor(model => model.PlantSet.PlantCommonName)</a></p>
+                    <p><a href="@Url.Content("~/PlantSets/Details/" + Model.PlantSet.Id)" style="color:#FDB298;text-decoration:underline"> @Html.DisplayFor(model => model.PlantSet.PlantCommonName)</a></p>
                 </dd>
 
             </dl>
