--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -14,7 +14,7 @@
 <div class="row" style="background-color:#4F6657">
     <!--Header-->
 
-    <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+    <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
         <div>
             <img src="~/Picture/Banner/IndTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
         </div>
@@ -26,10 +26,8 @@
         margin-top: 5%;
         margin-bottom: 5%">
         <div class="white-word" style="background:#344239;text-align:center;margin-top:10%;">
-            <H3>Let us help you decide which plant to plant!</H3>
-            <p>
-                @Html.ActionLink("No thanks.Give me the list of all plants", "PlantList")
-            </p>
+            <H3>Let us help you decide which plant to plant!</H3>           
+            <h1 style="font-size:16px;"><a href="@Url.Content("~/PlantSets/PlantList/")" style="color:#FDB298;text-decoration:underline">No thanks.Give me the list of all plants</a></h1>
         </div>
         <br>
         <br>
