Change the wrong directory

--- a/PlottedAssist/Views/Dashboard/Create.cshtml
+++ b/PlottedAssist/Views/Dashboard/Create.cshtml
@@ -44,7 +44,8 @@
         <div class="form-group">
             <div class="control-label col-sm-2">Water Frquency</div>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantWaterFrq Days
+                @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control" } }) 
+                Recommended frequency: @ViewBag.PlantWaterFrq Days
                 @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @type = "number", @class = "text-danger" })
             </div>
         </div>
@@ -52,7 +53,8 @@
         <div class="form-group">
             <div class="control-label col-sm-2">Prune Frquency</div>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantPruningFrq Days
+                @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } }) 
+                Recommended frequency: @ViewBag.PlantPruningFrq Days
                 @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @type = "number", @class = "text-danger" })
             </div>
         </div>
@@ -60,7 +62,8 @@
         <div class="form-group">
             <div class="control-label col-sm-2">Fertilize Frquency</div>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantFertilizerFrq Days
+                @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } }) 
+                Recommended frequency: @ViewBag.PlantFertilizerFrq Days
                 @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @type = "number", @class = "text-danger" })
             </div>
         </div>
@@ -68,7 +71,8 @@
         <div class="form-group">
             <div class="control-label col-sm-2">Mist Frquency</div>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantMistFrq Days
+                @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control" } }) 
+                Recommended frequency: @ViewBag.PlantMistFrq Days
                 @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @type = "number", @class = "text-danger" })
             </div>
         </div>
