--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -50,7 +50,7 @@
         </div>
 
         <div class="col-sm-12 white-word form-group" style="margin-top:20px">
-            <p style="font-size:16px;">2. How often would you like to water your plants? <a href="@Url.Content("~/SoilType/WateringGuide/")">Learn more...</a></p>
+            <p style="font-size:16px;">2. How often would you like to water your plants? <a href="@Url.Content("~/PlantInfo/WateringGuide/")" >Learn more...</a></p>
             <div class="radio">
                 <label>
                     <input type="radio" name="PlantWaterFrq" value="2">Often (2 -3 days)
@@ -86,7 +86,7 @@
         </div>
 
         <div class="col-sm-12 white-word form-group" style="margin-top:20px">
-            <p style="font-size:16px;">4. How much sunshine is available in your garden? <a href="@Url.Content("~/SoilType/Sunshine/")">Learn more...</a></p>
+            <p style="font-size:16px;">4. How much sunshine is available in your garden? <a href="@Url.Content("~/PlantInfo/Sunshine/")">Learn more...</a></p>
             <div class="radio">
                 <label>
                     <input type="radio" name="PlantSunNeedPath" value="1">All-day Sunny
@@ -101,7 +101,7 @@
         </div>
 
         <div class="col-sm-12 white-word form-group" style="margin-top:20px">
-            <p style="font-size:16px">5. Do you prefer drought tolerant plants? <a href="@Url.Content("~/SoilType/Benefits/")">Learn more...</a></p></p>
+            <p style="font-size:16px">5. Do you prefer drought tolerant plants? <a href="@Url.Content("~/PlantInfo/Benefits/")" >Learn more...</a></p></p>
             <div class="radio">
                 <label>
                     <input type="radio" name="PlantDroughtTol" value="1">Yes
